[package]
name = "tasklist-cli"
version = "0.1.0"
authors = ["Jacob <jcbcn@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
chrono = "0.4"

[dependencies.rusqlite]
version = "0.25.1"
features = ["bundled", "chrono"]