[package]
name = "tasklist-cli"
version = "0.1.0"
authors = ["Jacob <jcbcn@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
chrono = "0.4"
tasklist-server = { path = "tasklist-server" }
tasklist-core = { path = "tasklist-core" }
tokio = { version = "1.17.0", features = ["full"] }
actix-web = "3.3.3"

[[bin]]
name = "tl"
path = "src/main.rs"

[dev-dependencies]
assert_cmd = "0.10"
predicates = "1"
tempdir = "0.3"

[workspace]
members = [
    "tasklist-server",
    "tasklist-core"
]