[package]
name = "tasklist-server"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10"
actix-files = "0.5.0"
actix-web = "3.3.3"
actix-web-static-files = "3.0.5"
actix-web-actors = "3.0.0"
sys-info = "0.9.1"
open = "1"
tokio = "1.17.0"

env_logger = "0.9"
log = "0.4"
rand = "0.8"
serde = "1"
serde_json = "1"

[build-dependencies]
actix-web-static-files = "3.0.5"
